--- a/index.html
+++ b/index.html
@@ -68,17 +68,24 @@
 </section>
 </main>
 
-<article class="tetet">
+<article class="teet">
     <h1 class="text-center">‘Rome was not built in a day,<p class="fw-bold">neither was Edozzier.</p></h1>
     <p class="text-center fs-4">We have been steadily building since 2007, with a vision to see African <br>Schools attain and set the bar at the global stage.</p>
     <p class="text-center fw-bold fs-3">Learn More About Us</p>
  
 <section>
     <div>
-        <p><img src="Image/edozzier-app.png" alt="edozzier-app.png" width="100%"></p>
+        <p><img src="Image/edozzier-app.png" alt="edozzier-app.png" width=""></p>
     </div>
 </section>
 </article>
+
+<section>
+    <div>
+        <p>Our solutions</p>
+        <h1>We have solutions</h1>
+    </div>
+</section>
 </body>
 
 
